refactor: less text more context

--- a/q-means.ipynb
+++ b/q-means.ipynb
@@ -36,13 +36,13 @@
     "Vamos primeiro importar algumas bibliotecas que serão utilizadas no desenvolvimento desse projeto.\n",
     "\n",
     "O código importa bibliotecas e módulos comumente usados para análise de dados, visualização e tarefas de aprendizado de máquina.\n",
-    "- numpy (como np) é usado para operações numéricas.\n",
-    "- matplotlib.pyplot (como plt) é usado para visualização de dados.\n",
+    "- numpy é usado para operações numéricas.\n",
+    "- matplotlib.pyplot é usado para visualização de dados.\n",
     "- math fornece funções matemáticas e constantes.\n",
-    "- pandas (como pd) é usado para manipulação e análise de dados.\n",
+    "- pandas é usado para manipulação e análise de dados.\n",
     "- time é usado para medir o tempo de execução de partes específicas do código.\n",
     "\n",
-    "Também importamos módulos específicos do scikit-learn (sklearn), uma biblioteca popular de aprendizado de máquina em Python.\n",
+    "Também importamos módulos específicos do scikit-learn, uma biblioteca popular de aprendizado de máquina em Python.\n",
     "- `load_iris`, `load_wine` e `load_breast_cancer` são funções para carregar conjuntos de dados de exemplo do `scikit-learn`.\n",
     "- `PCA` é usado para análise de componentes principais, uma técnica de redução de dimensionalidade.\n",
     "- `MinMaxScaler` é usado para dimensionar recursos para o intervalo de 0 a 1.\n",
@@ -75,7 +75,9 @@
     "from sklearn.datasets import load_iris, load_wine, load_breast_cancer\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import davies_bouldin_score, silhouette_score"
+    "from sklearn.metrics import davies_bouldin_score, silhouette_score\n",
+    "\n",
+    "SEED = 42"
    ]
   },
   {
@@ -123,7 +125,7 @@
    "id": "0633a741-2069-44ca-840e-f2be606b673a",
    "metadata": {},
    "source": [
-    "Primeiro, vamos definir uma função chamada ``get_theta`` que recebe uma tupla `d` como entrada. Dentro da função, a tupla 'd' é descompactada em duas variáveis, `x` e `y`. Em seguida, a função calcula o valor de `theta` usando a fórmula ``(x + 1) * (π/2)`` e o valor de `phi` usando a fórmula ``(y + 1) * (π/2)``, onde 'π' é a constante matemática Pi. Por fim, a função retorna uma tupla contendo esses dois valores calculados, `theta` e `phi`.\n",
+    "Primeiro, vamos definir uma função chamada ``encode`` que recebe uma tupla `data` como entrada. Dentro da função, a tupla `data` é descompactada em duas variáveis, `x` e `y`. Em seguida, a função calcula o valor de `theta` (ângulo) usando a fórmula ``(x + 1) * (π/2)`` e o valor de `phi` (fase) usando a fórmula ``(y + 1) * (π/2)``.\n",
     "\n",
     "![Bloch sphere](bloch.png)\n",
     "\n",
@@ -137,8 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_theta(d):\n",
-    "    x, y = d[0], d[1]\n",
+    "def encode(data):\n",
+    "    x, y = data[0], data[1]\n",
     "\n",
     "    theta = (x + 1) * (pi / 2)\n",
     "    phi = (y + 1) * (pi / 2)\n",
@@ -151,9 +153,9 @@
    "id": "b0025e4a-bee1-4407-8946-52e9bcd958f3",
    "metadata": {},
    "source": [
-    "Agora, vamos definir uma função chamada `get_distance` com 2 parâmetros de entrada: `x`, `y`. Dentro da função, ela calcula os valores de `theta` e `phi` para `x` e `y` chamando a função `get_theta`. Em seguida, cria um circuito quântico envolvendo um registro quântico e um registro clássico, aplicando uma série de portas quânticas, incluindo as portas Hadamard, Rz, Ry e u3 em qubits específicos. O circuito é projetado para calcular uma medida de distância quântica entre dois estados quânticos representados por `x` e `y`. O resultado é armazenado no registro clássico. Posteriormente, o circuito é executado em um simulador quântico com 2048 execuções (shots), e a função retorna a probabilidade de obter o resultado `001` como a medida de distância.\n",
+    "Agora, vamos definir uma função chamada `get_distance` com 2 parâmetros de entrada: `x`, `y`. Dentro da função, ela computa os valores de `theta` e `phi` para `x` e `y` chamando a função `encode`. Em seguida, cria um circuito quântico envolvendo um registro quântico e um registro clássico, aplicando uma série de portas quânticas, incluindo as portas Hadamard, Rz, Ry e u3 em qubits específicos. O circuito é projetado para calcular uma medida de distância quântica entre dois estados quânticos representados por `x` e `y`. O resultado é armazenado no registro clássico. Posteriormente, o circuito é executado em um simulador quântico com 2048 execuções (shots), e a função retorna a probabilidade de obter o resultado `001` como a medida de distância.\n",
     "\n",
-    "$|0_{anc}\\rangle$ é o qubit auxiliar, através da porta $H$, mudará para $\\frac{1}{\\sqrt{2}}(|0\\rangle + |1\\rangle)$. Então sob o controle de $|1\\rangle$, o circuito vai fazer o swap dos vetores $|x\\rangle$ e $|y\\rangle$. Finalmente, o resultado no lado direito do circuito:\n",
+    "$|0_{anc}\\rangle$ é o qubit auxiliar, através da porta $H$, mudará para $\\frac{1}{\\sqrt{2}}(|0\\rangle + |1\\rangle)$. Então, sob o controle de $|1\\rangle$, o circuito vai fazer o swap dos vetores $|x\\rangle$ e $|y\\rangle$. Finalmente o resultado do lado direito do circuito:\n",
     "\n",
     "$$|0_{anc}\\rangle |x\\rangle |y\\rangle \\rightarrow \\frac{1}{2}|0_{anc}\\rangle(|xy\\rangle + |yx\\rangle) + \\frac{1}{2}|1_{anc}\\rangle(|xy\\rangle - |yx\\rangle)$$\n",
     "\n",
@@ -178,8 +180,8 @@
    "outputs": [],
    "source": [
     "def get_distance(x, y, shots=2048):\n",
-    "    theta_1, phi_1 = get_theta(x)\n",
-    "    theta_2, phi_2 = get_theta(y)\n",
+    "    theta_1, phi_1 = encode(x)\n",
+    "    theta_2, phi_2 = encode(y)\n",
     "    \n",
     "    qr = QuantumRegister(3, name='qr')\n",
     "    cr = ClassicalRegister(3, name='cr')\n",
@@ -215,7 +217,8 @@
    "id": "58e89fd4-672f-4b66-98dc-368cee22249c",
    "metadata": {},
    "source": [
-    "Também vamos definir uma função chamada `get_data`. A função determina qual conjunto de dados carregar com base no valor do parâmetro `model`. Se `model` for `iris`, o conjunto de dados Iris é carregado; se `model` for `wine`, o conjunto de dados Wine é carregado; caso contrário, o conjunto de `breast cancer` é carregado por padrão. Em seguida, os dados carregados são transformados em um DataFrame `df` usando as características e nomes de recursos fornecidos no conjunto de dados. Posteriormente, é realizada uma Análise de Componentes Principais (PCA) com 2 componentes. Os dados são transformados em pontos bidimensionais usando o PCA, e esses pontos transformados são retornados como resultado da função. Em resumo, essa função carrega um dos três conjuntos de dados com base no valor do parâmetro `model`, aplica PCA para reduzir a dimensionalidade dos dados para 2 componentes e retorna os pontos transformados."
+    "* Também vamos definir uma função chamada `get_data`.\n",
+    "* Posteriormente, é realizada uma Análise de Componentes Principais (PCA) com 2 componentes."
    ]
   },
   {
@@ -225,15 +228,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(model):\n",
-    "    if model == 'iris':\n",
-    "        data1 = load_iris()\n",
-    "    elif model == 'wine':\n",
-    "        data1 = load_wine()\n",
+    "def get_data(dataset):\n",
+    "    if dataset == 'iris':\n",
+    "        data = load_iris()\n",
+    "    elif dataset == 'wine':\n",
+    "        data = load_wine()\n",
     "    else:\n",
-    "        data1 = load_breast_cancer()\n",
+    "        data = load_breast_cancer()\n",
     "\n",
-    "    df = pd.DataFrame(data1['data'], columns=data1['feature_names'])\n",
+    "    df = pd.DataFrame(data['data'], columns=data['feature_names'])\n",
     "\n",
     "    pca_1 = PCA(n_components=2)\n",
     "    pca_1.fit(df)\n",
@@ -248,12 +251,15 @@
    "id": "71f69bdd-88c4-4b70-988f-e2e5fc9e3eb5",
    "metadata": {},
    "source": [
-    "Buscando visualizar melhor nossos resultados, vamos definir uma função chamada `draw_plot` com três parâmetros de entrada: points, centers e label (rótulo). A função desenha um gráfico de dispersão (`scatter plot`) com base no valor do parâmetro `label`. Se `label` for falso, a função simplesmente traça os pontos no gráfico de dispersão sem considerar os centros. Se `label` for verdadeiro, a função atribui cores diferentes aos pontos de acordo com os centros a que pertencem e exibe uma legenda indicando os clusters. Além disso, a função define limites para os eixos x e y do gráfico e, por fim, exibe o gráfico de dispersão"
+    "Buscando visualizar melhor nossos resultados, vamos definir funções de visualizações:\n",
+    "\n",
+    "* `draw_plot(points, centers, label)`: gráfico de dispersão com base no valor do parâmetro `label`.\n",
+    "* `plot_centroids(centers)`: gráfico de dispersão que mostra os centroides."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "3d2cbf98",
    "metadata": {},
    "outputs": [],
@@ -271,24 +277,9 @@
     "    plt.xlim(-0.15, 1.2)\n",
     "    plt.ylim(-0.15, 1.2)\n",
     "    \n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f67ca2ca-adc6-45bb-b622-d22898a40d01",
-   "metadata": {},
-   "source": [
-    "Vamos agora implementar uma função chamada `plot_centroids` com um parâmetro de entrada: centers (centros). A função é responsável por criar um gráfico de dispersão que mostra os centroids (pontos centrais) de clusters. Ela usa as coordenadas ``x`` da primeira coluna ``(centers[:, 0])`` e as coordenadas y da segunda coluna ``(centers[:, 1])`` do array `centers` para plotar os pontos. O parâmetro `s=3` define o tamanho dos pontos no gráfico como 3. Além disso, a função ajusta automaticamente os limites dos eixos x e y do gráfico para garantir que todos os centroids sejam visíveis. Por fim, exibe o gráfico com os centroids."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "25e508d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.show()\n",
+    "\n",
+    "\n",
     "def plot_centroids(centers):\n",
     "    plt.scatter(centers[:, 0], centers[:, 1], s=3)\n",
     "    \n",
@@ -303,7 +294,9 @@
    "id": "fbf5d6d6-d1dc-466b-845f-65d0ba3af518",
    "metadata": {},
    "source": [
-    "Agora vamos tratar da inicialização: para isso, vamos definir a função `initialize_centers` com dois parâmetros de entrada: `points` (pontos) e `k` (número de centros desejados). O código utiliza a função random.randint do NumPy para selecionar aleatoriamente `k` índices de pontos (índices de linhas) do array `points`. Os inteiros aleatórios estarão no intervalo ``[0, points.shape[0])``, onde ``points.shape[0]`` representa o número de linhas no array 'points'. Isso significa que os índices estarão no intervalo ``[0, points.shape[0]-1]``. A função retorna os `k` pontos iniciais escolhidos aleatoriamente do array `points` como os centros iniciais para um algoritmo de clusterização."
+    "Inicializando o espaço:\n",
+    "\n",
+    "* `initialize_centers(points, k)`: inicializa aleatoriamente `k` centroides."
    ]
   },
   {
@@ -314,7 +307,7 @@
    "outputs": [],
    "source": [
     "def initialize_centers(points, k):\n",
-    "    np.random.seed(45)\n",
+    "    np.random.seed(SEED)\n",
     "    \n",
     "    return points[np.random.randint(points.shape[0], size=k), :]"
    ]
@@ -324,7 +317,9 @@
    "id": "35d15074-e7bb-4403-8bd9-28ad0796c76d",
    "metadata": {},
    "source": [
-    "Uma das etapas fundamentais em um algoritmo de clusterização é encontrar o vizinho mais próximo. Portanto, agora temos a função `find_nearest_neighbour` com três parâmetros de entrada: `points` (pontos de dados), `centroids` (centroides). A função calcula o centro mais próximo para cada ponto de dados em relação aos centroides."
+    "Uma das etapas fundamentais em um algoritmo de clusterização é encontrar o vizinho mais próximo. \n",
+    "\n",
+    "* `find_nearest_neighbour(points, centroids)`: calcula o centro mais próximo para cada ponto de dados em relação aos centroides."
    ]
   },
   {
@@ -393,7 +388,7 @@
    "id": "2026f66f-1680-47ef-8daa-c85b60693c20",
    "metadata": {},
    "source": [
-    "Vamos criar uma breve função com o objetivo de pré-processar os dados, especificamente normalizando-os para o intervalo ``[0, 1]``. Primeiramente, criamos uma instância do ``MinMaxScaler``, que é um objeto responsável pela escala dos dados. Em seguida, utilizamos o método `fit_transform` do ``MinMaxScaler`` para realizar a normalização dos pontos de dados. Esse método calcula os valores mínimos e máximos de cada característica nos pontos de dados e dimensiona os pontos para que fiquem dentro do intervalo desejado, neste caso, ``[0, 1]``. O resultado é a matriz `normalized_data` contendo os pontos de dados normalizados, que é retornada pela função. Esse tipo de pré-processamento é frequentemente utilizado para garantir que os dados estejam em uma escala uniforme antes de aplicar algoritmos de aprendizado de máquina."
+    "Vamos criar uma breve função com o objetivo de pré-processar os dados, especificamente normalizando-os para o intervalo ``[0, 1]``."
    ]
   },
   {
